--- a/main.css
+++ b/main.css
@@ -22,16 +22,22 @@ body {
     text-align: center;
 }
 .container {
-    width: 100%;
+    width: 450px;
     height: 300px;
     margin-top: 50px;
 }
 button {
     width: 125px;
     height: 30px;
-    margin-top: 30px;
     background-color: rgb(0,255,0);
+    margin-top: 30px;
     color: black;
     border-radius: 20px;
     cursor: pointer;
+}
+#userinput {
+    margin-top: 30px;
+    width: 100px;
+    height: 15px;
+    background-color: black;
 }
