--- a/main.css
+++ b/main.css
@@ -40,4 +40,20 @@ button {
     width: 100px;
     height: 15px;
     background-color: black;
+    text-align: center;
+}
+.speech-area {
+    display: none;
+    width: 350px;
+    height: fit-content;
+    margin: 0 auto;
+    padding: 20px;
+    margin-top: 30px;
+    background-color: #fff;
+    border-radius: 10px;
+    text-align: center;
+}
+.speech-area p {
+    color: #000;
+    font-weight: bold;
 }
