--- a/main.css
+++ b/main.css
@@ -48,7 +48,7 @@ button {
     height: fit-content;
     margin: 0 auto;
     padding: 20px;
-    margin-top: 30px;
+    margin-bottom: 30px;
     background-color: #fff;
     border-radius: 10px;
     text-align: center;
