--- a/main.css
+++ b/main.css
@@ -65,9 +65,8 @@ button {
 }
 .backpack {
     display: none;
-    height: 100vh;
     width: 200px;
-    padding: 15px;
+    padding: 50px 15px 15px 15px;
     position: absolute;
     top: 0;
     left: 0;
@@ -85,34 +84,30 @@ button {
     width: 100%;
     height: 100%;
     margin-top: 15px;
-    display: grid;
-    justify-content: center;
-    grid-template-rows: 1fr 1fr 1fr;
-    row-gap: 15px;
+    display: flex;
+    flex-direction: column;
 }
 .item {
+    width: 100%;
     padding: 10px;
-    border-radius: 10px;
 }    
 .image-container {
     width: 100%;
     height: 100px;
     padding: 20px;
-    border-radius: 30px;
 }
 .item-image {
     height: 100%;
 }
-#item-2, #item-3 {
-    display: none;
-}
 .backpack-toggle {
-    width: fit-content;
+    display: none;
+    width: 200px;
+    height: 40px;
     padding: 5px;
     position: absolute;
     top:0;
     left: 0;
-    display: flex;
+    z-index: 10;
     justify-content: center;
     align-items: center;
     background-color: red;
@@ -120,4 +115,42 @@ button {
 }
 .backpack-toggle p {
     color: #fff;
+    font-size: 25px;
+}
+.display-block {
+    display: block;
+}
+.item-2 {
+    display: none;
+}
+.item-3 {
+    display: none;
+}
+.you-win, .you-lost {
+    display: none;
+    width: 100vw;
+    height: 100vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    background-color: black;
+    z-index: 100;
+}
+.end-game-title {
+    margin-bottom: 30px;
+    font-size: 40px;
+    font-family: 'Economica', sans-serif;
+    font-weight: 300;
+}
+.you-win img {
+    width: 400px;
+}
+.end-game-button {
+    width: 200px;
+    height: 40px;
+    font-size: 20px;
+    font-weight: 700;
 }
