--- a/main.css
+++ b/main.css
@@ -16,6 +16,7 @@ h3, h5, p, button, input {
     -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 body {
+    width: 100%;
     height: 100vh;
     padding: 30px;
     background-color: black;
@@ -28,7 +29,7 @@ body {
     text-align: center;
 }
 .container {
-    width: 500px;
+    max-width: 500px;
     height: 300px;
     margin-top: 50px;
 }
