--- a/main.css
+++ b/main.css
@@ -3,15 +3,17 @@
     margin: 0;
     border: 0;
     box-sizing: border-box;
-    color: rgb(0, 255, 0)
+    color: rgb(0, 255, 0);
+    text-align: none;
+    list-style: none;
 }
 h1 {
     font-family: 'Grenze Gotisch', cursive;
 }
-h3, h5, p, button, input {
+h3, h5, p, button, input, li, ul, strong, a {
     font-family: 'Economica', sans-serif;
 }
-p {
+p, li, ul, strong {
     font-size: 1.5rem
 }
 *:active, *:hover, *:visited, *:focus {
@@ -31,19 +33,16 @@ body {
     align-items: center;
     text-align: center;
 }
-.container {
-    max-width: 500px;
-    height: 300px;
-    margin-top: 50px;
-}
 button {
-    width: 125px;
-    height: 30px;
+    width: 150px;
+    height: 50px;
     margin-top: 30px;
     border-radius: 20px;
     background-color: rgb(0,255,0);
     color: black;
     cursor: pointer;
+    font-size: 1.5rem;
+    font-weight: 700
 }
 #userinput {
     margin-top: 30px;
